--- a/Isotopy.tex
+++ b/Isotopy.tex
@@ -122,7 +122,7 @@ University of South Carolina\\Columbia 29208\\USA}
 %% Only one Primary. Possibly several Secondary.
 %\subjclass[2010]{Primary: 08A30; Secondary: 08A60, 06B10.} %, 06B15.}
 %% Keywords and phrases
-\keywords{isotopy, isotopic algebras, congruence lattice}
+\keywords{finite algebras; isotopy; isotopic algebras; congruence lattices}
 %% Keywords and phrases
 %\keywords{congruence lattice, finite algebra, finite lattice representations}
 
