--- a/Isotopy.tex
+++ b/Isotopy.tex
@@ -133,9 +133,9 @@ University of South Carolina\\Columbia 29208\\USA}
 
 
 \begin{abstract}
-We give examples of pairs of isotopic algebras with nonisomorphic congruence
-lattices, thus answering negatively the question of whether all isotopic
-algebras have isomorphic congruence lattices.
+We present pairs of isotopic algebras with congruence lattices of different
+orders, thus answering negatively the question of whether all isotopic algebras
+have isomorphic congruence lattices.  
 \end{abstract}
 
 \maketitle
