--- a/Isotopy.tex
+++ b/Isotopy.tex
@@ -134,8 +134,8 @@ University of South Carolina\\Columbia 29208\\USA}
 
 \begin{abstract}
 We present pairs of isotopic algebras with congruence lattices of different
-orders, thus answering negatively the question of whether all isotopic algebras
-have isomorphic congruence lattices.  
+orders, thus answering negatively the question of whether isotopic algebras
+must have isomorphic congruence lattices.  
 \end{abstract}
 
 \maketitle
