--- a/Isotopy.tex
+++ b/Isotopy.tex
@@ -216,9 +216,10 @@ $\lb D, S\times S\rb \cong \NSub(S)$.
 \noindent {\bf The example.}
 Let $S$ be any finite non-Dedekind group. Let $G = S_1 \times S_2$, where
 $S_1 \cong S_2 \cong S$, and let $D = \{(x_1,x_2)\in G \mid x_1 = x_2\}$,  the
-diagonal subgroup of $G$. For ease of notation, put $T_1 = S_1 \times \{1\}$ and $T_2 = \{1\}\times S_2$.
+diagonal subgroup of $G$. For ease of notation, put $T_1 = S_1 \times \{1\}$ and 
+$T_2 = \{1\}\times S_2$.
 Then $D \cong T_1 \cong T_2$, and these three 
-subgroups are pair-wise compliments: $T_1\cap D = D\cap T_2 = T_1 \cap T_2 =
+subgroups are pairwise compliments: $T_1\cap D = D\cap T_2 = T_1 \cap T_2 =
 \{(1,1)\}$ and $ \<T_1, T_2\> = \<T_1,D\> = \<D, T_2\> = G$.
 
 Let $\bA$ be the algebra whose universe is the set $A = G/T_1$ of left
